# defect-vision-project

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: api.py
configs/: faster_rcnn.yaml
docs/: portfolio_notes.md
scripts/: export_model.py  make_synthetic_dataset.py
src/defect_detection/: engine.py  model.py  predict.py
src/defect_detection/data/: __init__.py  dataset.py  make_synthetic_dataset.py  transforms.py
src/defect_detection/export/: export_model.py
src/defect_detection/inference/: predict.py
src/defect_detection/models/: __init__.py
src/defect_detection/serving/: api.py  streamlit_app.py
src/defect_detection/training/: engine.py  evaluate.py  plot_metrics.py
src/defect_detection/utils/: __init__.py
src/defect_vision.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_dataset.py  test_plot_metrics.py
