[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defect-vision"
version = "0.1.0"
description = "PyTorch defect detection project with Faster R-CNN"
requires-python = ">=3.10"
authors = [{ name = "Mikhail" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
